# AI-GF-python

./: .env.example  .gitignore  README.md  agentic_behaviors.py  conversation_flow.py  deep_memory.py  emotional_intelligence.py  main.py  package-lock.json  package.json  personality_manager.py  personality_quirks.py  proactive_behaviors.py  pyproject.toml  realistic_typing.py  relationship_tracker.py  requirements.txt  temporal_engine.py
nextjs_prompt/: nextjs_ai_girlfriend_prompt.md
prompts/generator/: dynamic_system_template.txt  extra_horny_system_prompt.txt  fallback_response_prompt.txt  fallback_system_prompt.txt  personality_influences.txt  planner_prompt.txt  simple_system_prompt.txt  system_prompt.txt  time_behavior_guidance.txt
prompts/v1/: dynamic_system_template.txt  extra_horny_system_prompt.txt  fallback_response_prompt.txt  fallback_system_prompt.txt  personality_influences.txt  planner_prompt.txt  simple_system_prompt.txt  system_prompt.txt  time_behavior_guidance.txt
web/: .env.example  .env.minimal  .env.sample  .eslintrc.cjs  AUTHENTICATION_FIXED.md  AUTH_FIX_SUMMARY.md  CHAT_IMPROVEMENTS.md  QUICK_START.md  README.md  TESTING_CHAT.md  TROUBLESHOOTING.md  next.config.js  package-lock.json  package.json  setup-env.cjs  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
web/prisma/: dev.db  dev.db-journal  schema.prisma
web/prisma/prisma/: dev.db
web/scripts/: create-dev-session.ts  setup-dev-user.ts  test-auth-complete.ts  test-trpc.ts  verify-db.ts
web/src/: env.js  middleware.ts
web/src/app/: globals.css  layout.tsx  page.tsx  (+1 more)
(+39 files in other folders)
