[project]
name = "ai-gf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.1",
    "huggingface-hub>=0.34.4",
    "openai>=1.107.2",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "transformers>=4.56.1",
]
